--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -99,9 +99,7 @@
 }
 
 
-.container-searchbar{
 
-}
 .border-searchbar{
   padding: 1px;
   border: 1px solid black;
@@ -139,4 +137,51 @@
 
 
 /* ---------------/ VIDEOGAMES /-------------- */
+.container-videogames{
+  background-color: coral;
+  display: grid;
+  justify-content: center;
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100%;
+}
+.container-interno-videogames{
+  background-color: rgb(206, 86, 42);
+  display: grid;
+  justify-content: center;
+  width: 1200px;
+}
+.container-options-videogames{
+  background-color: rgb(255, 68, 0);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  align-items: center;
+  width: 1200px;
+  height: 40px;
+  border: 1px solid black;
+}
+.btn-page-videogames{
+  display: flex;
+  gap: 10px;
+}
+.options-filter-videogames{
+  display: flex;
+  gap: 10px;
+  border: 1px solid black;
+}
+.container-info-videogames{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  border: 1px solid black;
+  width: 100%;
+  height: 100vh;
+}
+
+
+.img-videogame{
+  width: 100px;
+  height: 100px;
+}
 /* ------------------------------------------- */
